--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Reduxstagram</title>
-    <link rel="shortcut icon" type="image/png" href="http://wes.io/ehRe/my-favourite-icon.png"/>
+    <title>To Do List</title>
 
   </head>
   <body>
