--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/dist/bundle.js" type="text/javascript"></script>
+    <script src="dist/bundle.js" type="text/javascript"></script>
   </body>
 </html>
